--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 nihil quis numquam repellendus suscipit voluptates, quibusdam asperiores ratione exercitationem animi eos
                 perspiciatis. Explicabo quisquam modi maiores, cumque quibusdam facere nesciunt eaque, quidem facilis, ab
                 corporis ad sed eligendi animi? Suscipit nostrum ipsum vel unde aspernatur! Rem eius libero excepturi!</p>
-
+            <aside>
+                <img src="//placehold.it/200x120">
+            </aside>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur obcaecati incidunt voluptatem.
                 Eos pariatur quis officia eaque sed officiis ratione dignissimos facilis quae illum deleniti culpa, animi
                 inventore soluta delectus dicta excepturi ea asperiores ab aliquam, alias architecto saepe voluptatem. Distinctio
@@ -33,9 +35,7 @@
                 corporis officiis quo facere. A, eum.</p>
         </section>
 
-        <aside>
-            <span><img src="//placehold.it/200x120"></span>
-        </aside>
+
     </div>
     <footer>
 
